--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,17 @@
+body{
+  background-color: #61b15a;
+}
+
 .player-container{
+  background-color: white;
   margin:10px;
   padding:20px;
   border-style: inset;
+  height: 300px;
+}
+
+.player-flex-container{
+  display:flex;
 }
 
 .card-container-key{
