--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,8 @@ body{
   margin:10px;
   padding:20px;
   border-style: inset;
-  height: 300px;
+  height: 250px;
+  border-radius: 10%;
 }
 
 .player-flex-container{
